test/units/TypingSpec/invalid/types/case-session-multi.algst
\(c : ?(Int, Int).end) -> case c of {
  (a, b) -> a + b
}
